<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_automobiles"
            android:title="@string/automobiles" />
        <item
            android:id="@+id/activity_main_drawer_business"
            android:title="@string/business" />
        <item
            android:id="@+id/activity_main_drawer_national"
            android:title="@string/national" />
        <item
            android:id="@+id/activity_main_drawer_politics"
            android:title="@string/politics" />
        <item
            android:id="@+id/activity_main_drawer_science"
            android:title="@string/science" />
        <item
            android:id="@+id/activity_main_drawer_sports"
            android:title="@string/sports" />
        <item
            android:id="@+id/activity_main_drawer_technology"
            android:title="@string/technology" />
        <item
            android:id="@+id/activity_main_drawer_world"
            android:title="@string/world" />
    </group>
</menu>