<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:hint="@string/search_edit_text"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        android:importantForAutofill="no"
        tools:targetApi="o" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/dates_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="@id/search_edit_text"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text">

        <TextView
            android:id="@+id/begin_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/begin_date"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:layout_weight="1"
            android:hint="@string/end_date"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/begin_date" />

        <TextView
            android:id="@+id/search_begin_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="DATE"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/begin_date"
            app:layout_constraintTop_toBottomOf="@id/begin_date" />

        <TextView
            android:id="@+id/search_end_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="DATE"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/end_date"
            app:layout_constraintTop_toTopOf="@+id/search_begin_date" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/categories_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/dates_constraint_layout">


        <CheckBox
            android:id="@+id/arts_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/arts"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/categories_constraint_layout"
            app:layout_constraintTop_toTopOf="@id/categories_constraint_layout" />

        <CheckBox
            android:id="@+id/business_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/business"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/arts_checkbox"
            app:layout_constraintTop_toBottomOf="@id/arts_checkbox" />

        <CheckBox
            android:id="@+id/entrepreneurs_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/entrepreneurs"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/arts_checkbox"
            app:layout_constraintTop_toBottomOf="@id/business_checkbox" />

        <CheckBox
            android:id="@+id/politics_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/politics"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/sports_checkbox"
            app:layout_constraintTop_toTopOf="@id/arts_checkbox" />

        <CheckBox
            android:id="@+id/sports_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/sports"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/travel_checkbox"
            app:layout_constraintTop_toTopOf="@id/business_checkbox" />

        <CheckBox
            android:id="@+id/travel_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/travel"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/entrepreneurs_checkbox"
            app:layout_constraintTop_toTopOf="@id/entrepreneurs_checkbox" />

    </android.support.constraint.ConstraintLayout>


    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/search_button"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/categories_constraint_layout" />

</android.support.constraint.ConstraintLayout>